<resources>

    <string name="app_name">Ejercicios Tema 1</string>
    <string name="text_btn_ej_uno">Ejercicio 1</string>
    <string name="text_btn_ej_dos">Ejercicio 2</string>
    <string name="text_btn_ej_tres">Ejercicio 3</string>
    <string name="text_btn_ej_cuatro">Ejercicio 4</string>
    <string name="text_btn_ej_cinco">Ejercicio 5</string>


    <string name="dolares">Dolares</string>
    <string name="euros">Euros</string>
    <string name="dolaresAEuros">Dólares a Euros</string>
    <string name="EurosADolares">Euros a Dólares</string>
    <string name="btnConvertir">Convertir</string>
    <string name="msjRatio">1  Euro = 1.12 USD</string>
    <string name="cambiar_ratio">Cambiar ratio</string>
    <string name="btnCambioRatioText">Regresar</string>
    <string name="textSon">SON</string>
    <string name="dolarSingular">Valor USD en EUROS</string>
    <string name="textEuroSingular">Valor EURO en USD</string>
    <string name="introducir_centimetros_ej_dos">Centimetros a pulgadas</string>
    <string name="edt_navegador_text">https://</string>
    <string name="btn_it_text">Ir</string>
    <string name="txv_navegador_text">Indique la URL de la página</string>
    <string name="text_button_lanzar_chrono">Start</string>
    <string name="btn_restar_tiempo">-</string>
    <string name="text_button_sumar_tiempo">+</string>
    <string name="text_button_pausar_chrono">Pause</string>
    <string name="txtAscendente">Ascendente</string>
    <string name="txtDescendente">Descendente</string>
    <string name="txtNCafeces">Cafés:</string>
    <string name="txtAlerta">Se terminaron las pausas por hoy</string>
    <string name="btnIntroducirPalabra">Comprobar</string>
    <string name="información_palabra">Detalle</string>
    <string name="titulo_cabecera_dicionario">Diccionario</string>
</resources>
