<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_seleccion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amador.ejerciciosintroduccion.SeleccionActivity"
    android:background="@color/colorBlack"
    >
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        >
        <Button
            android:id="@+id/btnEjUno"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:text="@string/text_btn_ej_uno"
            android:textSize="@dimen/text_size_button"
            android:onClick="getOnClick"
            />

        <Button
            android:id="@+id/btnEjDos"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:text="@string/text_btn_ej_dos"
            android:layout_below="@id/btnEjUno"
            android:textSize="@dimen/text_size_button"
            />

        <Button
            android:id="@+id/btnEjTres"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:text="@string/text_btn_ej_tres"
            android:layout_below="@id/btnEjDos"
            android:textSize="@dimen/text_size_button"
            />

        <Button
            android:id="@+id/btnEjCuatro"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:text="@string/text_btn_ej_cuatro"
            android:layout_below="@id/btnEjTres"
            android:textSize="@dimen/text_size_button"
            />

        <Button
            android:id="@+id/btnEjCinco"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:text="@string/text_btn_ej_cinco"
            android:layout_below="@id/btnEjCuatro"
            android:textSize="@dimen/text_size_button"
            />



    </RelativeLayout>




</RelativeLayout>
