<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio_tres"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amador.ejerciciosintroduccion.EjercicioTresClass">

    <TextView
        android:id="@+id/txvTextoNavegador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_navegador_text"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_button"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edtNavegador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_navegador_text"
        android:layout_below="@+id/txvTextoNavegador"
        />

    <Button
        android:id="@+id/btnNavegar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNavegador"
        android:layout_centerInParent="true"
        android:text="@string/btn_it_text"
        />

    <WebView
        android:id="@+id/wvwNavegador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNavegar"></WebView>

</RelativeLayout>
