<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_divisas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amador.ejerciciosintroduccion.EjercicioUnoClass"
    android:background="@color/colorGreen"
    >


    <LinearLayout
        android:id="@+id/lnSuperior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/edDolares"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
        <TextView
            android:text="@string/dolares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26dp"
            android:layout_marginLeft="50px"
            android:textColor="#000"
            android:textStyle="bold"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnInferior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lnSuperior"

        >

        <EditText

            android:id="@+id/edEuros"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euros"
            android:textStyle="bold"
            android:textSize="26dp"
            android:layout_marginLeft="50px"
            android:textColor="#000"
            />


    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnInferior"
        android:layout_centerInParent="true">

        <RadioButton
            android:id="@+id/rbDolarEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:text="@string/dolaresAEuros"
            android:textStyle="bold"
            android:textSize="26dp"
            android:checked="true"

            />

        <RadioButton
            android:id="@+id/rbEuroDolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:text="@string/EurosADolares"
            android:textStyle="bold"
            android:textSize="26dp"

            />

    </RadioGroup>


    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/rg"
        android:text="@string/btnConvertir"
        android:textStyle="bold"
        android:textSize="26dp"
        android:layout_marginTop="20px"
        android:onClick="onClickConversor"
        android:layout_centerInParent="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/btnConvertir"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary">

        <EditText
            android:id="@+id/edtRatio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnCambioRatio"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/edtRatio"
            android:textSize="26dp"
            android:text="@string/cambiar_ratio"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:onClick="onClickConversor"
            />



    </LinearLayout>








</RelativeLayout>