<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio_cuatro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amador.ejerciciosintroduccion.EjercicioCuatroClass"
    >

    <TextView
        android:id="@+id/txvTiempoCrono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"


        >

        <Button
            android:id="@+id/btnRestarTiempo"
            android:layout_width="@dimen/width_button_modificar_chrono"
            android:layout_height="@dimen/height_button_modificar_chrono"
            android:text="@string/btn_restar_tiempo"
            android:textStyle="bold"


            />

        <Button
            android:id="@+id/btnLanzarChrono"
            android:layout_width="@dimen/width_button_lanzar_chrono"
            android:layout_height="@dimen/height_button_lanzar_chrono"
            android:text="@string/text_button_lanzar_chrono"
            android:layout_centerInParent="true"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/btnSumarTiempo"
            android:layout_width="@dimen/width_button_modificar_chrono"
            android:layout_height="@dimen/height_button_modificar_chrono"
            android:text="@string/text_button_sumar_tiempo"
            android:textStyle="bold"


            />



    </LinearLayout>


</RelativeLayout>
